<resources>
    <string name="app_name">WeChat</string>
    <string name="lbl_getstarted_sub_intro">End-to-end secured messaging app with Social Elements</string>
    <string name="lbl_getstared_intro">Text your friends and share moments</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_welcome">Welcome !</string>
    <string name="lbl_login_to_continue">Login to continue</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_enter_your_password">Enter Your Password</string>
    <string name="lbl_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="lbl_required">Required</string>
    <string name="lbl_create_a_new_account">Create a new account</string>
    <string name="lbl_hi">Hi !</string>
    <string name="lbl_resend_code"> Resend Code</string>
    <string name="lbl_don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="lbl_get_otp">Get OTP</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date_of_birth">Date Of Birth</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_agree_to_term_and_service">Agree to <b>Term And Service</b></string>
    <string name="lbl_year">Year</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_moment">Moment</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_what_s_on_your_mind">What\'s on your mind?</string>
    <string name="lbl_active_now">Active Now</string>
    <string name="lbl_new_moment">New Moment</string>
    <string name="lbl_bookmarked_moments"><u>Bookmarked Moments</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_add_new">Add New</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_groups">Groups</string>
    <string name="lbl_favourite">Favourite</string>
    <string name="lbl_type_a_message">Type a message</string>
    <string name="lbl_cancle">Cancle</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_profile_image_success">Uploaded Profile Image Successfully</string>
    <string name="lbl_new_group">New Group</string>
    <string name="lbl_group_name">Group Name</string>
    <string name="lbl_require_group_image">Need to set up Group\'s Image</string>
</resources>