<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateNewMomentActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCreateMomentClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateMomentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new_moment"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivCreateMomentClose"
        app:layout_constraintEnd_toStartOf="@id/btnCreateMoments"
        app:layout_constraintStart_toEndOf="@id/ivCreateMomentClose"
        app:layout_constraintTop_toTopOf="@id/ivCreateMomentClose" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateMoments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_3x"
        android:text="@string/lbl_create"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/general_radius_btn"
        app:layout_constraintBottom_toBottomOf="@id/tvCreateMomentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCreateMomentLabel" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCreateMomentProfile"
        android:layout_width="@dimen/size_post_profile_img"
        android:layout_height="@dimen/size_post_profile_img"
        android:layout_marginTop="@dimen/margin_3x"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/ivCreateMomentClose"
        app:layout_constraintTop_toBottomOf="@id/ivCreateMomentClose"
        app:shapeAppearance="@style/circle_img"
        app:srcCompat="@drawable/placeholder_portrait" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCreateMomentUserName"
        android:layout_width="@dimen/empty"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivCreateMomentProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivCreateMomentProfile"
        app:layout_constraintTop_toTopOf="@id/ivCreateMomentProfile" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCreateMomentDesc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:layout_marginHorizontal="@dimen/margin_3x"
        android:layout_marginVertical="@dimen/margin_2x"
        android:background="@android:color/transparent"
        android:gravity="start"
        android:hint="@string/lbl_what_s_on_your_mind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCreateMomentProfile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCreateMomentAddMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/general_margin"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_2x"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/viewholder_media_photo" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/vvCreateMoment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:visibility="gone"
        app:use_controller="false"
        android:layout_marginHorizontal="@dimen/margin_3x"
        android:layout_marginVertical="@dimen/margin_2x"
        app:layout_constraintBottom_toTopOf="@id/rvCreateMomentAddMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCreateMomentDesc" />


</androidx.constraintlayout.widget.ConstraintLayout>